# rust-log-parser-example

./: .gitignore  Cargo.toml  README.md
benches/: simple.rs
src/: parser.rs
