[package]
name = "rust-logs-regex"
version = "0.1.0"
authors = ["Jack Chan <j4ckcyw@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.x"
env_logger = "0.8"
log = "0.4"
regex = "1.x"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "simple"
harness = false
